# ghost

./: .gitignore  AI_LAYER_MARKETING_PLAN.md  CI_FIX_SUMMARY.md  CLAUDE.md  DEPLOYMENT.md  IMPLEMENTATION.md  IMPROVEMENTS.md  PHASE3_CONTEXT.md  README.md  RELEASING.md  VERCEL_DEPLOYMENT_GUIDE.md  WORKFLOW_FIXES.md  deny.toml  github.env  netlify.toml  package.json  vercel.json  wrangler.toml
.github/workflows/: build.yml  deploy-website.yml  release.yml  rust.yml
docs/: PRODUCT_ROADMAP.md
public/: index.html  main.js  styles.css
src/: app.css  index.html  main.js  main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: auth.rs  commands.rs  config.rs  engine.rs  error.rs  lib.rs  macos_ax.rs  performance.rs  telemetry.rs
src-tauri/src/core/: ai.rs  cloud.rs  events.rs  execution.rs  knowledge.rs  llm.rs  mod.rs  replay_support.rs  security.rs  traits.rs  vision.rs  wait.rs
src-tauri/src/platform/: headless.rs  macos.rs  mod.rs  windows.rs
src-tauri/tests/: e2e.rs  integration_test.rs  ipc_contract.rs
