[package]
name = "ghost"
version = "0.1.0"
edition = "2021"

[lib]
name = "ghost_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
uuid = { version = "1", features = ["v4"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-chrome = { version = "0.7", optional = true }
image = "0.24"
ssim = "0.1"
rusttype = "0.9"
threadpool = "1.8"
base64 = "0.21"
async-trait = "0.1"
regex = "1.10"
dirs = "5"

[features]
default = []
profiling = ["tracing-chrome"]

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10"
core-graphics = "0.25"
accessibility-sys = "0.1"
enigo = "0.2"

[target.'cfg(target_os = "windows")'.dependencies]
enigo = "0.2"
